--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     text-align: center;
     font-family: "Merriweather", serif;
+    color: #40514E;
 }
 
 h1 {
@@ -17,6 +18,7 @@ h2 {
     font-family: "Montserrat", sans-serif;
     font-size: 2.5rem;
     color: #66BFBF;
+    padding-bottom: 10px;
 }
 
 h3 {
@@ -27,29 +29,53 @@ h3 {
 
 a {
    color: #11999E;
+   margin: 10px 20px;
+   text-decoration: none;
+   font-family: "Montserrat", sans-serif;
+}
+
+a:hover {
+    color: #EAF6F6;
+}
+
+hr {
+    color: #EAF6F6;
+    width: 5%;
+    border: dotted 6px;
+    border-bottom: none;
+    margin: 100px auto;
+}
+
+p {
+    line-height: 2;
 }
 
 .top-container {
     background-color: #E4F9F5;
     position: relative;
-    padding-top: 100px;
+    padding: 50px 0 20px;
 }
 
 .middle-container {
+    margin: 100px 0;
 }
 
 .bottom-container {
+    background-color: #66BFBF;
+    height: 10rem;
+    padding-top: 5rem;
+    margin-top: 3rem;
 }
 
 .bottom-cloud {
     position: absolute;
-    left: 300px;
-    bottom: 300px;
+    left: 400px;
+    bottom: 380px;
 }
 
 .top-cloud {
     position: absolute;
-    right: 300px;
+    right: 500px;
     top: 50px;
 }
 
@@ -66,7 +92,6 @@ a {
     width: 50%;
     margin: 100px auto 100px auto;
     text-align: left;
-    line-height: 2;
 }
 
 .code-img {
@@ -85,4 +110,48 @@ a {
     width: 25%;
     float: left;
     margin-right: 30px;
+}
+
+.contact-message{
+    width: 40%;
+    margin: 40px auto 60px;
+}
+
+
+.copyright {
+    color: #EAF6F6;
+    font-size: 0.75rem;
+    padding: 20px 0;
+}
+
+.intro {
+    width: 30%
+    margin: auto;
+}
+
+.btn {
+   background: #11CDD4;
+   background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+   background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+   background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+   background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+   background-image: linear-gradient(to bottom, #11CDD4, #11999E);
+   -webkit-border-radius: 8;
+   -moz-border-radius: 8;
+   border-radius: 8px;
+   color: #FFFFFF;
+   font-family: "Montserrat", sans-serif;
+   font-size: 20px;
+   padding: 10px 20px 10px 20px;
+   text-decoration: none;
+}
+
+.btn:hover {
+   background: #30E3CB;
+   background-image: -webkit-linear-gradient(top, #30E3CB, #2BC4AD);
+   background-image: -moz-linear-gradient(top, #30E3CB, #2BC4AD);
+   background-image: -ms-linear-gradient(top, #30E3CB, #2BC4AD);
+   background-image: -o-linear-gradient(top, #30E3CB, #2BC4AD);
+   background-image: linear-gradient(to bottom, #30E3CB, #2BC4AD);
+   text-decoration: none;
 }
